# transputer-simulator

./: LICENSE  stack.yaml  transputer-simulator.cabal
app/: Main.hs
src/: Transputer.hs  TransputerSimulator.hs
