name:                transputer-simulator
version:             0.1.0.0
synopsis:            A simulator for the Transputer CPU
homepage:            http://github.com/rossng/transputer-simulator
license:             Apache-2.0
license-file:        LICENSE
author:              Ross Gardiner
maintainer:          ross-public@gmx.com
copyright:           2015 Ross Gardiner
category:            Compilers/Interpreters
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     TransputerSimulator
                     , Transputer
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , lens
  default-language:    Haskell2010

executable transputer-simulator-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , transputer-simulator
                     , bytestring
  default-language:    Haskell2010

test-suite transputer-simulator-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , transputer-simulator
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/rossng/transputer-simulator
